[package]
name = "esp-remotecontrolled-led-matrix-client"
description = "Control an espPixelmatrix via Rust"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/esp-remotecontrolled-led-matrix-rust-client"
authors = ["EdJoPaTo <esp-remotecontrolled-led-matrix-rust-client@edjopato.de>"]
edition = "2018"
keywords = ["led", "matrix", "ws2812", "remotecontrolled"]
categories = ["api-bindings", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[[example]]
name = "fill"
required-features = ["sync"]

[[example]]
name = "image"
required-features = ["sync"]

[[example]]
name = "rectangle"
required-features = ["sync"]

[[example]]
name = "snake"
required-features = ["sync"]

[[example]]
name = "speedtest"
required-features = ["sync"]

[[example]]
name = "stars"
required-features = ["async-tokio", "tokio/full"]

[[example]]
name = "text"
required-features = ["embedded-graphics-impl", "tokio/full"]

[features]
default = ["sync", "async-tokio", "embedded-graphics-impl"]
sync = ["bufstream"]
async-tokio = ["tokio"]
embedded-graphics-impl = ["embedded-graphics", "sync"]

[dependencies]
bufstream = { version = "0.1", optional = true }
embedded-graphics = { version = "0.7", optional = true }
tokio = { version = "1.0", optional = true, features = ["io-util", "net", "sync"] }

[dev-dependencies]
anyhow = "1.0"
bracket-color = "0.8"
image = "0.24"
rand = "0.8"

[dev-dependencies.snake-logic]
# path = "../snake-logic"
git = "https://github.com/EdJoPaTo/snake-logic"
tag = "v0.4.0"
