[package]
name = "esp-remotecontrolled-led-matrix-client"
description = "Control an espPixelmatrix via Rust"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/esp-remotecontrolled-led-matrix-rust-client"
authors = ["EdJoPaTo <esp-remotecontrolled-led-matrix-rust-client@edjopato.de>"]
edition = "2021"
keywords = ["led", "matrix", "ws2812", "remotecontrolled"]
categories = ["api-bindings", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# See https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
lto = true

[[example]]
name = "fill"
required-features = ["sync"]

[[example]]
name = "image"
required-features = ["sync"]

[[example]]
name = "rectangle"
required-features = ["sync"]

[[example]]
name = "snake"
required-features = ["sync"]

[[example]]
name = "speedtest"
required-features = ["sync"]

[[example]]
name = "stars"
required-features = ["tokio/full"]

[[example]]
name = "text"
required-features = ["embedded-graphics", "tokio/full"]

[features]
default = []
embedded-graphics = ["dep:embedded-graphics", "sync"]
sync = ["dep:bufstream"]
tokio = ["dep:tokio"]

[dependencies]
bufstream = { version = "0.1", optional = true }
embedded-graphics = { version = "0.8", optional = true }
tokio = { version = "1", optional = true, features = ["io-util", "net", "sync"] }

[dev-dependencies]
anyhow = "1"
bracket-color = "0.8"
image = "0.24"
rand = "0.8"

[dev-dependencies.snake-logic]
# path = "../snake-logic"
git = "https://github.com/EdJoPaTo/snake-logic"
tag = "v0.4.1"
features = ["rand"]
