[package]
name = "esp-remotecontrolled-led-matrix-client"
description = "Control an espPixelmatrix via Rust"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/EdJoPaTo/esp-remotecontrolled-led-matrix-rust-client"
authors = ["EdJoPaTo <esp-remotecontrolled-led-matrix-rust-client@edjopato.de>"]
edition = "2021"
rust-version = "1.70"
keywords = ["led", "matrix", "ws2812", "remotecontrolled"]
categories = ["api-bindings", "network-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["embedded-graphics", "tokio"]
embedded-graphics = ["dep:embedded-graphics", "sync"]
sync = ["dep:bufstream"]
tokio = ["dep:tokio"]

[lints.rust]
unsafe_code = "forbid"
[lints.clippy]
pedantic = "warn"
nursery = "warn"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bufstream = { version = "0.1.0", optional = true }
embedded-graphics = { version = "0.8.0", optional = true }
tokio = { version = "1.0.1", optional = true, features = ["io-util", "net", "sync"] }

[dev-dependencies]
anyhow = "1.0.58"
bracket-color = "0.8.7"
image = "0.25.2"
rand = "0.8.0"
tokio = { version = "1.0.1", features = ["full"] }

[dev-dependencies.snake-logic]
# path = "../snake-logic"
git = "https://github.com/EdJoPaTo/snake-logic"
tag = "v0.4.1"
features = ["rand"]

[[example]]
name = "fill"
required-features = ["sync"]

[[example]]
name = "image"
required-features = ["sync"]

[[example]]
name = "rectangle"
required-features = ["sync"]

[[example]]
name = "snake"
required-features = ["sync"]

[[example]]
name = "speedtest"
required-features = ["sync"]

[[example]]
name = "stars"
required-features = ["tokio"]

[[example]]
name = "text"
required-features = ["embedded-graphics", "tokio"]
